# World-Wide-Swarm-Protocol

./: .dockerignore  BACKLOG.md  Cargo.toml  Dockerfile  MANIFEST.md  QUICKSTART.md  README.md  docker-compose.e2e.yml  start_demo_swarm.sh  start_local_swarm.sh
.github/workflows/: release.yml
crates/openswarm-connector/: Cargo.toml
crates/openswarm-connector/src/: connector.rs  file_server.rs  lib.rs  main.rs  operator_console.rs  reputation.rs  rpc_server.rs
crates/openswarm-protocol/src/: types.rs
crates/openswarm-state/src/: crdt.rs  lib.rs
crates/wws-connector/: Cargo.toml
crates/wws-connector/src/: config.rs  connector.rs  file_server.rs  identity_store.rs  lib.rs  main.rs  operator_console.rs  rpc_server.rs  tui.rs
crates/wws-connector/tests/: integration_tests.rs  multi_agent_tests.rs
crates/wws-consensus/src/: cascade.rs
crates/wws-hierarchy/src/: pyramid.rs
crates/wws-hierarchy/tests/: pyramid_tests.rs
crates/wws-network/: Cargo.toml
crates/wws-network/src/: behaviour.rs  lib.rs
crates/wws-protocol/: Cargo.toml
crates/wws-protocol/src/: constants.rs  messages.rs  types.rs
crates/wws-protocol/tests/: message_tests.rs  types_tests.rs
crates/wws-state/src/: crdt.rs  lib.rs
demo/: demo-setup-prompt.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ADVANCED_FEATURES.md  Architecture.md  Connector-Guide.md  Consensus.md  HEARTBEAT.md  Home.md  MESSAGING.md  Network.md  Protocol-Messages.md  Protocol-Specification.md  REPUTATION-AND-IDENTITY-SECURITY.md  RUN_AGENT.md  SKILL.md  Security-Report.md  State-Management.md  Troubleshooting.md  Web-Dashboard.md  _Sidebar.md  package.json  wws-moltbook-insights.md
docs/plans/: 2026-03-02-cosmic-canvas-topology-design.md  2026-03-02-cosmic-canvas-topology.md  2026-03-02-demo-swarm-design.md  2026-03-02-demo-swarm-v0.7.0.md  2026-03-02-protocol-completeness-v0.6.0-design.md  2026-03-02-reputation-identity-v0.5.md  2026-03-02-task-completion-messages-ui.md
docs/test-tasks/: Triple-Negative Breast Cancer (TNBC).md
scripts/: deploy-bootstrap-gcp.sh  dns-bootstrap-setup.sh  run-30-agents-web.sh  run-agent.sh  run-console.sh  run-node.sh  show-hierarchy.sh  stop-30-agents-web.sh  swarm-manager.sh  test-both-modes.sh
tests/e2e/: docker-e2e.sh  e2e_20_agents.py  e2e_docker.py  run_physics_agents.py  start_connectors.sh  test_consensus_ui.py
tests/playwright/: e2e-30-agent-web.spec.js  phase3-holonic-e2e.spec.js  webapp.spec.js
tests/release/: test_release.py
webapp/: package.json
webapp/src/: App.jsx  styles.css
webapp/src/api/: client.js
webapp/src/components/: AgentDetailPanel.jsx  AuditPanel.jsx  BottomTray.jsx  CosmicCanvas.jsx  Header.jsx  HolonDetailPanel.jsx  LiveGraph.jsx  MessagesPanel.jsx  SubmitTaskModal.jsx  TaskDetailPanel.jsx
