[workspace]
resolver = "2"
members = [
    "crates/openswarm-protocol",
    "crates/openswarm-network",
    "crates/openswarm-consensus",
    "crates/openswarm-hierarchy",
    "crates/openswarm-state",
    "crates/openswarm-connector",
]

[workspace.package]
version = "0.7.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Good-karma-lab/World-Wide-Swarm-Protocol"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
bip39 = "2"
hex = "0.4"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Config
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Internal crates
openswarm-protocol = { path = "crates/openswarm-protocol" }
openswarm-network = { path = "crates/openswarm-network" }
openswarm-consensus = { path = "crates/openswarm-consensus" }
openswarm-hierarchy = { path = "crates/openswarm-hierarchy" }
openswarm-state = { path = "crates/openswarm-state" }
openswarm-connector = { path = "crates/openswarm-connector" }
