[package]
name = "wws-protocol"
description = "Core protocol types and message definitions for the World Wide Swarm (WWS) Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
bip39 = { workspace = true }
zeroize = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
